I seem to have the login functionality working